tests/baselines/reference/parserStrictMode7.errors.txt
parserStrictMode7.ts(2,3): error TS1100: Invalid use of 'eval' in strict mode.
parserStrictMode7.ts(2,3): error TS2630: Cannot assign to 'eval' because it is a function.


==== parserStrictMode7.ts (2 errors) ====
    "use strict";
    ++eval;
      ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
      ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.